<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiFiAdvisor</string>
    <string name="hello_world">Hello world!</string>
    <string name="empty">시작을 눌러주세요</string>
    <string name="start">5초 시작</string>
    <string name="infinitestart">계속 측정</string>
    <string name="stop">중지</string>
    <string name="ssid">SSID</string>
    <string name="bssid">BSSID</string>
    <string name="capabilities">capabilities</string>
    <string name="frequency">frequency</string>
    <string name="level">level</string>
    <string name="avgSig">average signal</string>
    <string name="security">security</string>
    <string name="channel">channel</string>
    <string name="throughput">throughput</string>
</resources>
