<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
	tools:context="${packageName}.${activityClass}" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="10"
	    android:orientation="vertical" >
 
	  	<ListView android:id="@android:id/list"
	      	android:layout_width="match_parent"
	      	android:layout_height="match_parent" >
	      
	  	</ListView>
      
  		<TextView android:id="@android:id/empty"
	      	android:text="@string/empty"
	      	android:textSize="30sp"
	      	android:layout_width="wrap_content"
	      	android:layout_height="wrap_content" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="1">
  		
		<Button
			android:id="@+id/startBtn"
			android:text="@string/start"
			android:layout_height="match_parent"
			android:layout_width="wrap_content"/>
		
		<Button
			android:id="@+id/infiniteStartBtn"
			android:text="@string/infinitestart"
			android:layout_height="match_parent"
			android:layout_width="wrap_content"/>
		
		<Button
		    android:id="@+id/stopBtn"
		    android:text="@string/stop"
		    android:layout_height="match_parent"
		    android:layout_width="wrap_content"/>
	</LinearLayout>
    
</LinearLayout>
